(fix): 修复了PDF下载返回空白文档以及jwt检验失败日志不显示的bug
- 直接通过 response.getOutputStream() 写入二进制流 — 绕过 Spring 的消息转换器，保证二进制数据原样传输
- 为 JwtTokenInterceptor 添加 ObjectMapper、BaseResponse 及 ErrorCode 支持，实现 JSON 格式错误响应